--- a/templates/sae14/home.html.twig
+++ b/templates/sae14/home.html.twig
@@ -6,8 +6,8 @@
   display: block;
   width: 100%;
   border: none;
-  background-color: #04AA6D;
-  color: white;
+  background-color: rgb(0, 255, 179);;
+  color: rgb(4, 12, 41);;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
