--- a/templates/sae14/portfolio.html.twig
+++ b/templates/sae14/portfolio.html.twig
@@ -299,7 +299,7 @@
     <body>       
 				<section class="section-plans" id="section-plans">
                         <div class="u-center-text u-margin-bottom-big">
-                        <h2 class="heading-secondary" style="font-size:1.7vw;">  :
+                        <h2 class="heading-secondary" style="font-size:1.7vw;">Mon e-portfolio :
                         </h2>
                         </div>
                     <div class="row">
@@ -314,7 +314,7 @@
                         <div class="card__side card__side--back card__side--back-1">
                             <div class="card__cta">
                             <div class="card__price-box">
-                                <p class="card__price-only">....</p>
+                                <p class="card__price-only" style="font-size:2vw;">Assister l’administrateur du réseau</p>
                             </div>
                             <a href="/moneportfoliocca" class="btn btn--white">GO</a>
                             </div>
@@ -332,7 +332,7 @@
                         <div class="card__side card__side--back card__side--back-2">
                             <div class="card__cta">
                             <div class="card__price-box">
-                                <p class="card__price-only">...</p>
+                                <p class="card__price-only" style="font-size:2vw;">Découvrir les transmissions et la ToIP</p>
                             </div>
                             <a href="/moneportfolioccb" class="btn btn--white">GO</a>
                             </div>
@@ -350,7 +350,7 @@
                         <div class="card__side card__side--back card__side--back-3">
                             <div class="card__cta">
                             <div class="card__price-box">
-                                <p class="card__price-only">...</p>
+                                <p class="card__price-only" style="font-size:2vw;">S’intégrer dans un service informatique</p>
                             </div>
                             <a href="/moneportfolioccc" class="btn btn--white">GO</a>
                             </div>
