--- a/templates/sae14/portfolioccb.html.twig
+++ b/templates/sae14/portfolioccb.html.twig
@@ -26,10 +26,6 @@
                 text-align: left;
             }
 
-            u{
-                color: green;
-            }
-
             .btn {
             background-color: #06495F;
             border: none;
@@ -39,69 +35,40 @@
             font-size: 20px;
             }
 
-            progress
+            .fondhome{
+            outline-style: solid;
+            border: 1px solid black;
+            outline-color: white;
+            outline-width: thin;
+            border-radius: 8px;
+            }
         </style>
     </head>
     
     <body>
-    <br> <h1 style="font-size:2vw;">Connecter les entreprises et les usagers</h1> <br>
-            <div class="container">
-                <h2 style="font-size:1.5vw;">en choisissant les solutions et technologies réseaux adaptées
-                    en respectant les principes fondamentaux de la sécurité informatique
-                    en utilisant une approche rigoureuse pour la résolution des dysfonctionnements
-                    en respectant les règles métiers
-                    en assurant une veille technologique
-                </h2> <br>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                        </div>
+        <div class="container">   
+            <div class="fondhome">
+                <br> <h1 style="font-size:2vw;">Connecter les entreprises et les usagers</h1> <br>
+                        <h2 style="font-size:1.5vw;">Chaque case correspond à un apprentissage critique réalisé durant ma première année de formation, avec ce que j'ai acquis et un document 
+                        avec les tâches réalisées en classe (bouton "Download") :
+                        </h2> <br>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="aprentissages-critiques">
+                                        <h3 style="font-size:1.5vw;"> Déployer des supports de transmission :</h3>
+                                        <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                        <h5 style="font-size:1vw"> - Réaliser un câblage horizontal (sur une baie à étage) <br> - Souder une fibre optique</h5>
+                                        <button class="btn"><a href="CCB - Déployer des supports de transmission.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                <div class="progress">
+                                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                </div>
+                                    </div>
+                                </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                        </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                        </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                        </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>    
+                        </div>    
             </div>
-    </body>
+        </div>
+</body>
 
 {% endblock %}
