--- a/templates/sae14/portfoliocca.html.twig
+++ b/templates/sae14/portfoliocca.html.twig
@@ -7,6 +7,14 @@
                 text-align: center;
             }
 
+            .fondhome{
+            outline-style: solid;
+            border: 1px solid black;
+            outline-color: white;
+            outline-width: thin;
+            border-radius: 8px;
+            }
+
             h3{
                font-family: "Lato", sans-serif;
                color: rgb(4, 12, 41);
@@ -26,10 +34,6 @@
                 text-align: left;
             }
 
-            u{
-                color: green;
-            }
-
             .btn {
             background-color: #06495F;
             border: none;
@@ -39,69 +43,91 @@
             font-size: 20px;
             }
 
-            progress
         </style>
     </head>
     
-    <body>
-    <br> <h1 style="font-size:2vw;">Administrer les réseaux et l’Internet</h1> <br>
-            <div class="container">
-                <h2 style="font-size:1.5vw;">en choisissant les solutions et technologies réseaux adaptées
-                    en respectant les principes fondamentaux de la sécurité informatique
-                    en utilisant une approche rigoureuse pour la résolution des dysfonctionnements
-                    en respectant les règles métiers
-                    en assurant une veille technologique
-                </h2> <br>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                        </div>
+<body>
+    <div class="container">   
+        <div class="fondhome">
+            <br> <h1 style="font-size:2vw;">Administrer les réseaux et l’Internet</h1> <br>
+                        <h2 style="font-size:1.5vw;">Chaque case correspond à un apprentissage critique réalisé durant ma première année de formation, avec ce que j'ai acquis et un document avec les tâches réalisées en classe (bouton "Download") :
+                        </h2> <br>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="aprentissages-critiques">
+                                        <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité :</h3>
+                                        <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                        <h5 style="font-size:1vw"> - Déterminer un pont diviseur<br>- Calculer une tension et un courant</h5>
+                                        <button class="btn"><a href="CCA - Maîtriser les lois fondamentales de l’électricité.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                <div class="progress">
+                                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="aprentissages-critiques">
+                                        <h3 style="font-size:1.5vw;"> Comprendre l’architecture des systèmes numériques :</h3>
+                                        <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                        <h5 style="font-size:1vw"> - Lister les principales vulnérabilités pour me prévenir d'une cyberattaque</h5>
+                                        <button class="btn"><a href="CCA - Comprendre l’architecture des systèmes numériques.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                <div class="progress">
+                                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                        </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="aprentissages-critiques">
+                                        <h3 style="font-size:1.5vw;"> Configurer les fonctions de base du réseau local :</h3>
+                                        <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                        <h5 style="font-size:1vw"> - Configurer les interfaces d'un switch avec le bon VLAN ou avec un lien trunk <br> - Donner un nom au switch <br> - Bien câbler un switch</h5>
+                                        <button class="btn"><a href="CCA - Configurer les fonctions de base du réseau local.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                <div class="progress">
+                                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="aprentissages-critiques">
+                                        <h3 style="font-size:1.5vw;"> Maîtriser les rôles et les principes fondamentaux des systèmes d’exploitation :</h3>
+                                        <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                        <h5 style="font-size:1vw"> - Connaître les conséquences d'une cyberattaque sur le système d'exploitation et se prémunir</h5>
+                                        <button class="btn"><a href="CCA - Maîtriser les rôles et les principes fondamentaux des systèmes d’exploitation.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                <div class="progress">
+                                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="aprentissages-critiques">
+                                            <h3 style="font-size:1.5vw;"> Savoir identifier les dysfonctionnements du réseau local :</h3>
+                                            <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                            <h5 style="font-size:1vw"> - Savoir identifier les dysfonctionnements sur un réseau et le résoudre <br> - Connaître les conséquences d'une attaque</h5>
+                                            <button class="btn"><a href="CCA - Identifier les dysfonctionnements du réseau local.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                    <div class="progress">
+                                                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                    </div>
                                         </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
-                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
-                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
-                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="aprentissages-critiques">
+                                            <h3 style="font-size:1.5vw;"> Installer un poste client et le sécuriser :</h3>
+                                            <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                            <h5 style="font-size:1vw"> - Configurer des adresses IP sur un VLAN (à l'aide du logiciel Putty) <br> - Mettre en place un dossier partagé entre un hôte et un client</h5>
+                                            <button class="btn"><a href="CCA - Installer un poste client.docx" download><i class="fa fa-download"></i> Download</button></a>
+                                                    <div class="progress">
+                                                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                                    </div>
                                         </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>    
-            </div>
-    </body>
+                        </div>    
+        </div>
+    </div>   
+</body>
 
 {% endblock %}
