--- a/templates/sae14/home.html.twig
+++ b/templates/sae14/home.html.twig
@@ -6,8 +6,8 @@
   display: block;
   width: 100%;
   border: none;
-  background-color: rgb(0, 255, 179);;
-  color: rgb(4, 12, 41);;
+  background-color: rgb(0, 255, 179);
+  color: rgb(4, 12, 41);
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
@@ -47,9 +47,9 @@ img {
               <h1 style="font-size:2vw;"> Alexis BAROU R&T 1ère année - IUT Roanne - alexis.barou@etu.univ-st-etienne.fr</h1><br>
               <h2 style="font-size:1.7vw;"> Titulaire d'un bac STI2D avec mention "bien", passionné de nouvelles technologies, je suis curieux, à l'écoute et pleinement disposé à toujours donner le meilleur 
                 de moi même.
-                En intégrant l'IUT "Réseaux et Télécomunications", j'ai la change d'évoluer dans un environnement qui me convient parfaitement à travers l'acquisition de solides 
+                En intégrant l'IUT "Réseaux et Télécomunications", j'ai la chance d'évoluer dans un environnement qui me convient parfaitement à travers l'acquisition de solides 
                 connaissances opérationnelles.</h2><br>
-              <button class="block" onclick="window.location.href = ....">Pour en savoir plus sur moi</button>
+              <button class="block"><a href="/quisuisje">Pour en savoir plus sur moi</button>
         </div>
       </div>
 {% endblock %}
