--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
                 <a href="/" class="active"><i class="fa fa-fw fa-home"></i>Accueil</a>
                 <a href="/moncv"><i class='fa fa-fw fa-address-card'></i> Mon CV</a>
                 <a href="/moneportfolio"><i class='fa fa-fw fa-folder-open'></i> Mon e-portfolio</a>
-                <a href="#contact"><i class="fa fa-fw fa-user"></i> Qui suis-je ?</a>
+                <a href="/quisuisje"><i class="fa fa-fw fa-user"></i> Qui suis-je ?</a>
                 <a href="#about"><i class="fa fa-fw fa-envelope"></i> Contact</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
