--- a/templates/sae14/home.html.twig
+++ b/templates/sae14/home.html.twig
@@ -49,7 +49,7 @@ img {
                 de moi même.
                 En intégrant l'IUT "Réseaux et Télécomunications", j'ai la chance d'évoluer dans un environnement qui me convient parfaitement à travers l'acquisition de solides 
                 connaissances opérationnelles.</h2><br>
-              <button class="block"><a href="/quisuisje">Pour en savoir plus sur moi</button>
+              <button class="block" onclick="window.location.href = 'http://127.0.0.1:8000/quisuisje'; ">Pour en savoir plus sur moi</button>
         </div>
       </div>
 {% endblock %}
