--- a/templates/sae14/quisuisje.html.twig
+++ b/templates/sae14/quisuisje.html.twig
@@ -100,6 +100,9 @@
                     background: #bb0000;
                     color: white;
                 }
+                .fa-youtube:hover{
+                    color: white;
+                }
         </style>
     </head>
     
