--- a/templates/sae14/quisuisje.html.twig
+++ b/templates/sae14/quisuisje.html.twig
@@ -13,6 +13,7 @@
                     font-size: 40px;
                     color: rgb(0, 255, 179);
                     text-align: center;
+                    padding: 10px;
                 }
 
                 h3{
@@ -183,17 +184,18 @@
                     <div class="row">
                         <div class="column1">
                             <div class="content1">
-                                <img src="collection1.jpg" style="width:100%">
+                                <img src="collection2.jpg" style="width:100%">
                                 <h3>Mes collections</h3>
                                 <p>Je collectionne près de 3000 numéros du magazine "France Football" allant des années 80 à aujourd'hui. Il a fallu beaucoup de patience pendant plus de 5 ans pour retrouver et ne manquer aucun numéro.</p>
-                                <p>Je possède également des livres qui traîtent du même sujet, des DVD et VHS de matchs pour faire mes vidéos...</p>
+                                <p>Je possède également des livres qui traîtent du même sujet, des DVD et VHS de matchs...soit pleins de choses qui touchent au foot</p>
                             </div>
                         </div>
                         <div class="column1">
                             <div class="content1">
-                                <img src="test.jpg" style="width:100%">
-                                <h3>Mon loisir</h3>
-                                <p>Mon jeune âge, pour me lancer dans le monde de YouTube de manière autodidacte, a susité l'intéret d'un journaliste du Progrès de Lyon en Janvier 2019.</p>
+                                <img src="foot1.jpg" style="width:100%">
+                                <h3>Mes activités</h3>
+                                <p>Depuis mes 4 ans, je joue au foot en club. Je suis actuellement dans l'équipe sénior, qui évolue en Départemental 3 
+                                (soit la 11ème division du football en France).</p>
                             </div>
                         </div>
                 
