--- a/templates/sae14/contact.html.twig
+++ b/templates/sae14/contact.html.twig
@@ -117,8 +117,8 @@ a {
                         <label style='color:white'>Votre email</label>
                         <input onkeypress="check()" id ="email"type="text" placeholder="Votre email..">
                         <label style='color:white'>Sujet</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:150px"></textarea>
-                        <p id ="text" style="display:none"><button>Envoyer</button></p>
+                        <textarea id="subject" name="subject" placeholder="Votre problèmme.." style="height:100px"></textarea>
+                        <p id ="text" style="display:none"><a href="CV.png" download><button>Envoyer</button></p>
                     </div>
                 </div>
             </div>
