--- a/templates/sae14/quisuisje.html.twig
+++ b/templates/sae14/quisuisje.html.twig
@@ -163,7 +163,7 @@
                         <div class="content">
                             <img src="articlesweb.jpg" style="width:100%">
                             <h3>Mes contenus sont réutilisés</h3>
-                            <p>Des sites de presse sportive (France Football), de presse régionale (MidiLibre) ou encore les sites officiels de club de foot (AS Monaco) utilisent mes vidéos pour alimenter leurs articles.</p>
+                            <p>Des sites de presse sportive (France Football...), de presse régionale (MidiLibre...) ou encore les sites officiels de club de foot (AS Monaco...) utilisent mes vidéos pour alimenter leurs articles.</p>
                         </div>
                     </div>
                     <div class="column">
@@ -173,8 +173,8 @@
                             <p>N'ayant aucune connaissance technique de base dans l'audiovisuel mais étant très curieux et très motivé, je me suis lancé grâce à des tutoriels sur le web.</p>
                             <p>J'ai commencé avec le logiciel de montage "Movie Maker" au début de ma chaine (un logiciel très basique de Windows mais très efficace pour commencer), puis pour répondre aux attentes des internautes, 
                             je travaille mes vidéos avec "HitFilm Express" (logiciel plus complexe, avec beaucoup de fonctionnalités, mais très complet).<p>
-                            <p>En achetant des cassettes vidéo enregistrées sur les sites de petites annonces, je peux les convertir en MP4 grâce à un convertiseur RCA jusqu'au port USB de l'ordinateur, à l'aide d'un magnétoscope et d'un logiciel pour enregistrer l'image.
-                            Ce qui me permet de proposer du contenu sur ma chaine et d'éviter, aux vendeurs, de les jetter à la poubelle !</p>
+                            <p>En achetant des cassettes vidéo enregistrées sur les sites de petites annonces, je peux les convertir en MP4 grâce à un convertisseur RCA jusqu'au port USB de l'ordinateur, à l'aide d'un magnétoscope et d'un logiciel pour enregistrer l'image.
+                            Ce qui me permet de proposer du contenu sur ma chaine et d'éviter, aux vendeurs, de les jeter à la poubelle !</p>
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                                 <img src="collection2.jpg" style="width:100%">
                                 <h3>Mes collections</h3>
                                 <p>Je collectionne près de 3000 numéros du magazine "France Football" allant des années 80 à aujourd'hui. Il a fallu beaucoup de patience pendant plus de 5 ans pour retrouver et ne manquer aucun numéro.</p>
-                                <p>Je possède également des livres qui traîtent du même sujet, des DVD et VHS de matchs...soit pleins de choses qui touchent au foot</p>
+                                <p>Je possède également des livres qui traîtent du même sujet, des DVD et VHS de matchs...soit beaucoup de choses qui touchent au foot</p>
                             </div>
                         </div>
                         <div class="column1">
