--- a/templates/sae14/contact.html.twig
+++ b/templates/sae14/contact.html.twig
@@ -103,7 +103,7 @@ a {
                     <div class="column">
                         <h2 style="text-align:center">Fiche récap' auteur</h2>
                             <div class="card">
-                              <img src="lassalle.jpg" style="width:100%">
+                              <img src="photo_contact.jpg" style="width:100%">
                               <h1>Alexis Barou</h1>
                               <p>18 ans, étudiant en BUT Réseaux et Télécomunications à Roanne (42300)</p>
                               <p>Pour me retrouver :</p>
@@ -126,7 +126,7 @@ a {
                         <label style='color:white'>Votre message</label>
                         <textarea id="subject" name="subject" placeholder="Votre problèmme.." style="height:100px"></textarea>
                         <h3 style="text-align:right">*Champs obligatoire</h3>
-                        <p id ="text" style="display:none"><a href="CV.png" download><button>Envoyer</button></p>
+                        <button id ="text" style="display:none" onclick="window.location.href = 'http://127.0.0.1:8000/CV.png'; ">Envoyer</button>
                     </div>
                 </div>
             </div>
